Update several pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-05 Tue 23:25 -->
+<!-- 2019-11-07 Thu 17:20 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn</title>
@@ -28,14 +28,22 @@
 물론 아직은 내용이 별로 없어서 썰렁하지만 조금씩 채워갈 예정입니다.
 </p>
 
+<div id="outline-container-org5386109" class="outline-2">
+<h2 id="org5386109">탐색 시작하기 좋은 페이지</h2>
+<div class="outline-text-2" id="text-org5386109">
+<ul class="org-ul">
+<li><a href="./doom-emacs-sapzil.html">Doom Emacs 삽질기</a></li>
+</ul>
+</div>
+</div>
 <div id="outline-container-org727f77b" class="outline-2">
 <h2 id="org727f77b">외부 사이트 링크</h2>
 <div class="outline-text-2" id="text-org727f77b">
 <ul class="org-ul">
-<li><a href="https://seorenn.tistory.com">https://seorenn.tistory.com</a></li>
+<li><a href="https://seorenn.tistory.com">Tistory 블로그 - 개발 위주</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 05일 최종수정</div><div id="copyright">Copyright 2019 Seorenn</div></div></div>
+<div id="footer"><div id="time">2019년 11월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
