Update several pages

--- a/doom-emacs-sapzil-install.html
+++ b/doom-emacs-sapzil-install.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-07 Thu 17:02 -->
+<!-- 2019-11-07 Thu 17:48 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 삽질기 - 설치편 - Seorenn</title>
@@ -26,7 +26,7 @@ $ bin/doom install
 </pre>
 </div>
 <p>
-설치 끝. Emacs를 실행시켜보자.
+설치 끝. Emacs를 실행시켜보자. 그리고 부족한 문서화에 분노를 느껴보자.
 </p>
 </div>
 </div>
