--- a/doom-emacs-sapzil.html
+++ b/doom-emacs-sapzil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-07 Thu 16:49 -->
+<!-- 2019-11-07 Thu 17:48 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 삽질기 - Seorenn</title>
@@ -20,6 +20,7 @@ Doom Emacs 를 설치하고 사용하는 과정에서 겪은 삽질기를 메모
 
 <ul class="org-ul">
 <li><a href="./doom-emacs-sapzil-install.html">Doom Emacs 삽질기 - 설치편</a></li>
+<li><a href="./org-publish-sapzil.html">org-publish 삽질기</a></li>
 </ul>
 
 <p>
