--- a/doom-emacs-sapzil-install.html
+++ b/doom-emacs-sapzil-install.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-08 Fri 16:15 -->
+<!-- 2019-11-08 Fri 19:35 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 삽질기 - 설치편 - Seorenn</title>
@@ -27,7 +27,7 @@ $ bin/doom install
 </pre>
 </div>
 <p>
-설치 끝. Emacs를 실행시켜보자. 그리고 부족한 문서화에 분노를 느껴보자.
+설치가 끝나면 Emacs를 실행시켜보자. 그리고 부족한 문서화에 분노를 느껴보자.
 </p>
 </div>
 </div>
@@ -37,26 +37,32 @@ $ bin/doom install
 <ul class="org-ul">
 <li>Spacemacs 에서 뭔가 잘 안 될 때마다 Doom Emacs에 관심을 가지게 되었다.</li>
 <li>그러다 누군가의 설치기를 구글링으로 찾았다.</li>
-<li>그대로 해보기로 했다. <code>git clone https://github.com/hlissner/doom-emacs ~/.emacs.d</code> 명령으로
+<li>그대로 해보기로 했다.</li>
+<li><code>git clone https://github.com/hlissner/doom-emacs ~/.emacs.d</code> 명령으로
 클론.</li>
-<li><code>cd ~/.emacs.d</code> 명령으로 내용물을 보니 혼돈의 카오스가 펼쳐짐. 그래 보지 말자.</li>
-<li>이 녀석도 개발버전이 따로 있나해서 찾아봤다. develop 브랜치가 있고 master 보다
-엄청나게 많은 커밋이 쌓여있음. 거기다 master는 마지막 커밋이 1년 전이었다. Spacemacs와 상황은 비슷한 것 같았다.</li>
-<li>그래서 개발버전을 사용하기로 함. <code>git checkout develop</code> 으로 브랜치만 바꾸면
+<li><code>cd ~/.emacs.d</code> 명령으로 내용물을 보니 혼돈의 카오스가 펼쳐짐.</li>
+<li>그래 보지 말자.</li>
+<li>이 녀석도 개발버전이 따로 있나해서 찾아봤다.</li>
+<li>develop 브랜치가 있고 master 보다 엄청나게 많은 커밋이 쌓여있음.</li>
+<li>master는 마지막 커밋이 1년 전인 것이 안정버전 개발이 늦는 건 Spacemacs와 비슷한 것 같았다.</li>
+<li>그래서 개발버전을 사용하기로 함.</li>
+<li><code>git checkout develop</code> 으로 브랜치만 바꾸면
 되니 어려울 건 없다.</li>
-<li>모 설치기에선 이후 <code>make install</code> 을 하라길래 그대로 따라했다. 근데 deprecated
-되었다면서 쓰지 말래. 뭐 하여간 이것저것 물어오더니 설치가 진행되긴 되더라.</li>
-<li>뭐 어쨌든 되는거니까 돌아가겠지라는 생각에 그냥 놔뒀다. 설치는 되게 오래
-걸리더라. Spacemacs 보다도 훨씬 오래 걸렸다.</li>
-<li><code>make install</code> 이 완료된 후 Emacs를 실행시켜 봤다. 에러가 뜬다. 뭔 소린지
-모르겠다. 살려줘.</li>
+<li>모 설치기에선 이후 <code>make install</code> 을 하라길래 그대로 따라했다.</li>
+<li>근데 deprecated 되었다면서 쓰지 말래.</li>
+<li>그래도 이것저것 물어오더니 설치가 진행되긴 되더라.</li>
+<li>뭐 어쨌든 되는거니까 돌아가겠지라는 생각에 그냥 놔뒀다.</li>
+<li>설치는 되게 오래 걸리더라. Spacemacs 보다도 훨씬 오래 걸렸다.</li>
+<li><code>make install</code> 이 완료된 후 Emacs를 실행시켜 봤다.</li>
+<li>에러가 뜬다. 뭔 소린지 모르겠다. 살려줘.</li>
 <li>약간을 헤메다 공식 설치 문서에 적힌 대로 <code>bin/doom install</code> 을 때려봤다. 이거
 make로 설치할 때랑 비슷한 화면이 흘러가는데 되는걸까? 하여간 똑같이 물어오고
 똑같이 답하고 비슷하게 설치가 진행되었다.</li>
-<li>완료 후 다시 Emacs 띄움. 어 1초만에 화면이 뜬다. 아름다운 화면이&#x2026;</li>
+<li>완료 후 다시 Emacs 띄움.</li>
+<li>어 1초만에 화면이 뜬다. 아름다운 화면이&#x2026;</li>
 <li>정말 빠르긴 빠르다. Spacemacs보다 5배는 빠르게 뜨는 것 같다. 기동 속도만 말이지만&#x2026;</li>
-<li>어쨌든 설치가 완료되었다. 이제 더더욱 더하고 더한 삽질로 이어질 것 같다.
-왜냐하면 문서가 없다 문서가&#x2026; Spacemacs의 친절한 문서가 그립다.</li>
+<li>어쨌든 설치가 완료되었다. 이제 더더욱 더하고 더한 삽질로 이어질 것 같다.</li>
+<li>왜냐하면 문서가 없다 문서가&#x2026; Spacemacs의 친절한 문서가 그립다.</li>
 </ul>
 
 <hr>
