Update image to builtin

--- a/doom-emacs-sapzil.html
+++ b/doom-emacs-sapzil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-09 Sat 16:38 -->
+<!-- 2019-11-10 Sun 15:10 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 삽질기 - Seorenn</title>
@@ -15,9 +15,11 @@
 <div id="content">
 <header>
 <h1 class="title">Doom Emacs 삽질기</h1>
-<h2><a href="/">by Seorenn</a></h2></header><p>
-<img src="https://lh3.googleusercontent.com/k71lCGs30WkXfnD6egECxoD4Oz62ovROKCK3u3r5WGlioBVXTfaN7j1V_shsGXRwyxyXMIFSAEEhLx4xqmEKi_wK8Q5Ht0khR3MoXfPAIUoPzATX9_iz0Yo7rEp2b62DF-P6i05GQ2mggpEJbduIGTBq67GrbsPVd7GS5GAO6BpC-vSRnhfUVLWMaiKQDQECgqVqGYzOHFfEhjbFByOzpVv0GHysWkhirAka4vmFT3Wcs_8no-VWYz76t84H3540GW54muLL0TZ6v_ZLRwTuRDevTW0MU6RUwRWNL3fUoB9S1oFn-_UhEkWXyABi3M5UZtfuqCvRwgPkCrsBW0VRK86DI6dlmruLBk6HXQ-2uxBtlqiipfPzn6GMSWDywX4imhjvspy_oCIaKlj3KQJ4iAj1gFHY6PJfMIx_VabpgRY8N-t6z4QXv0RQx9qZkidrf1jl_uuHsQloXcHLL0cfQlOzGGoy3Xd9S-CyJReIq4biaISKKxnLHIp-1jiuj49gqN1rGDqoYCou4_qpfz88uLrLanXOZpEgwHseMe0cibHuMl2D5yw4vuYA21rapLbKYE9sQnUHNaoFQXGo0dWOuSIp2wYjO7eDNsd25PVJudaBPRIPjouu8U5GHfVwS1TtLswMs_Gt82g1xqFVVqEX42nWIMStgsCVAQGyFyoKwP4lpuAryqXdTg=w2012-h1172-no" alt="nil"/>
-</p>
+<h2><a href="/">by Seorenn</a></h2></header>
+<figure>
+<img src="./img/doom-emacs-initial-c95.png" alt="doom-emacs-initial-c95.png">
+
+</figure>
 
 <p>
 Doom Emacs 를 설치하고 사용하는 과정에서 겪은 삽질기를 메모하기 위한 글입니다.
@@ -35,6 +37,6 @@ Doom Emacs 를 설치하고 사용하는 과정에서 겪은 삽질기를 메모
 <ul class="org-ul">
 <li><a href="./doom-emacs-shortcuts.html">Doom Emacs 단축키 메모</a></li>
 </ul>
-<div id="footer"><div id="time">2019년 11월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 10일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
