Updated several pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-08 Fri 16:15 -->
+<!-- 2019-11-10 Sun 18:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn</title>
@@ -16,35 +16,28 @@
 <header>
 <h1 class="title">Frontpage</h1>
 <h2><a href="/">by Seorenn</a></h2></header><p>
-어서오세요. Seorenn 의 특수한 페이지 저장소입니다.
-</p>
-
-<p>
-마치 위키 대문 같은 제목의 이 페이지는 그저 채울게 없어서 만들어 둔 시작페이지
-정도의 페이지일 뿐입니다.
-</p>
-
-<p>
-사이트의 모든 링크는 <a href="./sitemap.html">사이트맵</a>에서 볼 수 있습니다.
-물론 아직은 내용이 별로 없어서 썰렁하지만 조금씩 채워갈 예정입니다.
+어서오세요. Seorenn 의 특수한 페이지 저장소입니다. 이 곳은 그냥 제가 원할
+때 마다 조금씩 글을 작성하여 즉석에서 업데이트 하는 용도로 만들어졌습니다.
+따라서 미완성 글들이 넘쳐나며 동시에 업데이트도 자주 발생하는 그런 글들만 모여 있습니다.
 </p>
 
 <div id="outline-container-org5386109" class="outline-2">
 <h2 id="org5386109">탐색 시작하기 좋은 페이지</h2>
 <div class="outline-text-2" id="text-org5386109">
+<p>
+몇 가지 분류를 모아놓은 가이드 페이지들입니다.
+</p>
 <ul class="org-ul">
-<li><a href="./doom-emacs-sapzil.html">Doom Emacs 삽질기</a></li>
+<li><a href="./profile.html">Profile</a></li>
+<li><a href="./doom-emacs.html">Doom Emacs</a></li>
+<li><a href="./swift.html">Swift</a></li>
 </ul>
+
+<p>
+사이트의 모든 링크는 <a href="./sitemap.html">사이트맵</a>에서 볼 수 있습니다.
+</p>
 </div>
 </div>
-<div id="outline-container-org727f77b" class="outline-2">
-<h2 id="org727f77b">외부 사이트 링크</h2>
-<div class="outline-text-2" id="text-org727f77b">
-<ul class="org-ul">
-<li><a href="https://seorenn.tistory.com">Tistory 블로그 - 개발 위주</a></li>
-</ul>
-</div>
-</div>
-<div id="footer"><div id="time">2019년 11월 08일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 10일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
