--- a/doom-emacs-sapzil.html
+++ b/doom-emacs-sapzil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-10 Sun 15:10 -->
+<!-- 2019-11-10 Sun 15:50 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 삽질기 - Seorenn</title>
@@ -15,28 +15,20 @@
 <div id="content">
 <header>
 <h1 class="title">Doom Emacs 삽질기</h1>
-<h2><a href="/">by Seorenn</a></h2></header>
-<figure>
-<img src="./img/doom-emacs-initial-c95.png" alt="doom-emacs-initial-c95.png">
-
-</figure>
-
-<p>
-Doom Emacs 를 설치하고 사용하는 과정에서 겪은 삽질기를 메모하기 위한 글입니다.
+<h2><a href="/">by Seorenn</a></h2></header><p>
+아래 링크들은 이 Doom Emacs 를 설치하고 사용하는 과정에서 겪은 삽질기를 메모하기 위한 글입니다.
 </p>
 
 <ul class="org-ul">
 <li><a href="./doom-emacs-sapzil-install.html">Doom Emacs 삽질기 - 설치편</a></li>
-<li><a href="./org-publish-sapzil.html">org-publish 삽질기</a></li>
+<li><a href="./doom-emacs-sapzil-config.html">Doom Emacs 삽질기 - 설정편</a></li>
 </ul>
+
+<hr>
 
 <p>
-기타
+관련글: <a href="./doom-emacs.html">Doom Emacs</a>
 </p>
-
-<ul class="org-ul">
-<li><a href="./doom-emacs-shortcuts.html">Doom Emacs 단축키 메모</a></li>
-</ul>
 <div id="footer"><div id="time">2019년 11월 10일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
