--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-08 Fri 16:15 -->
+<!-- 2019-11-10 Sun 15:24 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Profile - Seorenn</title>
@@ -15,10 +15,49 @@
 <div id="content">
 <header>
 <h1 class="title">Profile</h1>
-<h2><a href="/">by Seorenn</a></h2></header><p>
-시험삼아 만든 페이지라 내용이 없어요. 나중에 채울게요. 어차피 개인정보라 그다지
-적을게 없을 것입니다 후훗.
+<h2><a href="/">by Seorenn</a></h2></header>
+<div id="outline-container-org44b63ff" class="outline-2">
+<h2 id="org44b63ff">Seorenn</h2>
+<div class="outline-text-2" id="text-org44b63ff">
+<p>
+네 Seorenn 입니다. 한국어로 '세오렌' 이라고 대충 읽으면 됩니다. 잡다한 일을 하는
+개발자이고 고전양식 혹은 르네상스양식 건축물 좋아합니다.
 </p>
-<div id="footer"><div id="time">2019년 11월 08일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div>
+</div>
+<div id="outline-container-org7131534" class="outline-2">
+<h2 id="org7131534">Links</h2>
+<div class="outline-text-2" id="text-org7131534">
+<p>
+현재 활동 중인 SNS 및 블로그 링크입니다.
+</p>
+<ul class="org-ul">
+<li>Twitter: <a href="https://twitter.com/seorenn">https://twitter.com/seorenn</a></li>
+<li>Github: <a href="https://github.com/seorenn">https://github.com/seorenn</a></li>
+<li>Youtube 1: <a href="https://youtube.com/c/seorenn">https://youtube.com/c/seorenn</a></li>
+<li>Youtube 2: <a href="https://youtube.com/c/SeorennGaming">https://youtube.com/c/SeorennGaming</a></li>
+<li>Blog 1: <a href="https://seorenn.tistory.com">https://seorenn.tistory.com</a></li>
+<li>Blog 2: <a href="https://healthyrenn.tistory.com">https://healthyrenn.tistory.com</a></li>
+</ul>
+<p>
+이 외에도 몇 가지가 있지만 사생활과 관련된 링크라 공개하지 않습니다.
+</p>
+</div>
+</div>
+<div id="outline-container-orga0d9aeb" class="outline-2">
+<h2 id="orga0d9aeb">Deactivated Links</h2>
+<div class="outline-text-2" id="text-orga0d9aeb">
+<p>
+현재는 업데이트 하지 않는 옛날 블로그들입니다.
+</p>
+<ul class="org-ul">
+<li>Blog 3: <a href="https://seorenn.blogspot.com">https://seorenn.blogspot.com</a></li>
+<li>Blog 4: <a href="https://rennflav.blogspot.com">https://rennflav.blogspot.com</a></li>
+<li>Blog 5: <a href="https://hirenn.blogspot.com">https://hirenn.blogspot.com</a></li>
+<li>Blog 6: <a href="https://renngames.blogspot.com">https://renngames.blogspot.com</a></li>
+</ul>
+</div>
+</div>
+<div id="footer"><div id="time">2019년 11월 10일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
