Update several pages

--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-10 Sun 15:24 -->
+<!-- 2019-11-10 Sun 19:22 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Profile - Seorenn</title>
@@ -32,15 +32,16 @@
 현재 활동 중인 SNS 및 블로그 링크입니다.
 </p>
 <ul class="org-ul">
-<li>Twitter: <a href="https://twitter.com/seorenn">https://twitter.com/seorenn</a></li>
-<li>Github: <a href="https://github.com/seorenn">https://github.com/seorenn</a></li>
-<li>Youtube 1: <a href="https://youtube.com/c/seorenn">https://youtube.com/c/seorenn</a></li>
-<li>Youtube 2: <a href="https://youtube.com/c/SeorennGaming">https://youtube.com/c/SeorennGaming</a></li>
-<li>Blog 1: <a href="https://seorenn.tistory.com">https://seorenn.tistory.com</a></li>
-<li>Blog 2: <a href="https://healthyrenn.tistory.com">https://healthyrenn.tistory.com</a></li>
+<li>Twitter: <a target="_blank" href="https://twitter.com/seorenn">https://twitter.com/seorenn</a></li>
+<li>GitHub: <a target="_blank" href="https://github.com/seorenn">https://github.com/seorenn</a></li>
+<li>Youtube 1: <a target="_blank" href="https://youtube.com/c/seorenn">https://youtube.com/c/seorenn</a></li>
+<li>Youtube 2: <a target="_blank" href="https://youtube.com/c/SeorennGaming">https://youtube.com/c/SeorennGaming</a></li>
+<li>Blog 1: <a target="_blank" href="https://seorenn.tistory.com">https://seorenn.tistory.com</a></li>
+<li>Blog 2: <a target="_blank" href="https://healthyrenn.tistory.com">https://healthyrenn.tistory.com</a></li>
 </ul>
 <p>
-이 외에도 몇 가지가 있지만 사생활과 관련된 링크라 공개하지 않습니다.
+이 외에도 몇 가지 SNS 계정이 있지만 사생활과 관련된 링크라 공개하지 않습니다.
+별로 숨길 이유도 없긴 하지만&#x2026;
 </p>
 </div>
 </div>
@@ -48,13 +49,15 @@
 <h2 id="orga0d9aeb">Deactivated Links</h2>
 <div class="outline-text-2" id="text-orga0d9aeb">
 <p>
-현재는 업데이트 하지 않는 옛날 블로그들입니다.
+여기에는 현재는 업데이트 하지 않는 옛날 블로그들 주소를 정리합니다. 업데이트는
+되지 않고 있지만 많은 글이 쌓여있는 데이터베이스와 같은 것들이라 버리긴 너무나
+아깝네요.
 </p>
 <ul class="org-ul">
-<li>Blog 3: <a href="https://seorenn.blogspot.com">https://seorenn.blogspot.com</a></li>
-<li>Blog 4: <a href="https://rennflav.blogspot.com">https://rennflav.blogspot.com</a></li>
-<li>Blog 5: <a href="https://hirenn.blogspot.com">https://hirenn.blogspot.com</a></li>
-<li>Blog 6: <a href="https://renngames.blogspot.com">https://renngames.blogspot.com</a></li>
+<li>Blog 3: <a target="_blank" href="https://seorenn.blogspot.com">https://seorenn.blogspot.com</a></li>
+<li>Blog 4: <a target="_blank" href="https://rennflav.blogspot.com">https://rennflav.blogspot.com</a></li>
+<li>Blog 5: <a target="_blank" href="https://hirenn.blogspot.com">https://hirenn.blogspot.com</a></li>
+<li>Blog 6: <a target="_blank" href="https://renngames.blogspot.com">https://renngames.blogspot.com</a></li>
 </ul>
 </div>
 </div>
