--- a/swift-5-1.html
+++ b/swift-5-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-10 Sun 18:55 -->
+<!-- 2019-11-10 Sun 19:01 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Swift 5.1 - Seorenn</title>
@@ -23,13 +23,13 @@
 블로그에 미리 정리해둔 글이 있는 관계로 직접 쓰지는 않고 링크만 정리합니다.
 </p>
 <ul class="org-ul">
-<li><a href="https://seorenn.tistory.com/27">Self 키워드의 기능 추가 (SE-0068)</a></li>
-<li><a href="https://seorenn.tistory.com/28">순서가 있는 콜렉션끼리 차이점 비교하기 (SE-0240)</a></li>
-<li><a href="https://seorenn.tistory.com/29">구조체 생성자에 기본값 지원 (SE-0242)</a></li>
-<li><a href="https://seorenn.tistory.com/30">Opaque Result Types 그리고 some (SE-0244)</a></li>
-<li><a href="https://seorenn.tistory.com/32">초기화 없는 배열 생성하기 (SE-0245)</a></li>
-<li><a href="https://seorenn.tistory.com/33">키 패스를 이용한 동적 멤버 찾아보기 (SE-0252)</a></li>
-<li><a href="https://seorenn.tistory.com/35">Static Subscript (SE-0254)</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/27">Self 키워드의 기능 추가 (SE-0068)</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/28">순서가 있는 콜렉션끼리 차이점 비교하기 (SE-0240)</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/29">구조체 생성자에 기본값 지원 (SE-0242)</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/30">Opaque Result Types 그리고 some (SE-0244)</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/32">초기화 없는 배열 생성하기 (SE-0245)</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/33">키 패스를 이용한 동적 멤버 찾아보기 (SE-0252)</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/35">Static Subscript (SE-0254)</a></li>
 </ul>
 
 <hr>
