Redesign site structure

--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-10 Sun 19:31 -->
+<!-- 2019-11-10 Sun 21:51 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn</title>
@@ -22,11 +22,15 @@
 <li><a href="doom-emacs-sapzil.html">Doom Emacs 삽질기</a></li>
 <li><a href="doom-emacs-sapzil-config.html">Doom Emacs 삽질기 - 설정편</a></li>
 <li><a href="doom-emacs-sapzil-install.html">Doom Emacs 삽질기 - 설치편</a></li>
+<li><a href="doom-emacs-config.html">Doom Emacs 설정 기본</a></li>
+<li><a href="doom-emacs-install.html">Doom Emacs 설치하기</a></li>
 <li><a href="index.html">Frontpage</a></li>
 <li><a href="profile.html">Profile</a></li>
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swift-5-1.html">Swift 5.1</a></li>
+<li><a href="org-publish.html">org-publish</a></li>
 <li><a href="org-publish-sapzil.html">org-publish 삽질기</a></li>
+<li><a href="org-publish-tips.html">org-publish 팁 모음</a></li>
 </ul>
 <div id="footer"><div id="time">2019년 11월 10일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
