--- a/org-publish.html
+++ b/org-publish.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-10 Sun 21:32 -->
+<!-- 2019-11-11 Mon 14:32 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>org-publish - Seorenn</title>
@@ -10,6 +10,13 @@
 <link rel="stylesheet" type="text/css" href="/static/style.css"/>
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345"/>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-44534026-1');
+</script>
 </head>
 <body>
 <div id="content">
@@ -154,7 +161,8 @@ org-publish는 다행히도 별도로 설치할 필요가 없는 확장입니다
 
 <p>
 나머지 <code>static</code> 과 <code>img</code> 의 내용은 특정한 확장자의 파일들을 그대로 복사하도록
-하기 위한 규칙들입니다.
+하기 위한 규칙들입니다. 특별하게 <code>publishing-function</code> 이 사용되었는데 여기서
+사용된 <code>org-publish-attachment</code> 는 말 그대로 첨부용 파일을 그대로 복사하는 용도로 볼 수 있습니다.
 </p>
 </div>
 </div>
@@ -162,7 +170,7 @@ org-publish는 다행히도 별도로 설치할 필요가 없는 확장입니다
 <h2 id="orgaed45bb">Publish 해보기</h2>
 <div class="outline-text-2" id="text-orgaed45bb">
 <p>
-편챁을 하기 위해서는 <code>org-publish-all</code> 함수를 호출하면 됩니다.
+편찬(publish)을 하기 위해서는 <code>org-publish-all</code> 함수를 호출하면 됩니다.
 일반 Emacs 라면 <code>M-x org-publish-all</code> 로 실행시키거나, 혹은 Doom Emacs 라면
 <code>SPC : org-publish-all</code> 로 실행시키면 된다. Spacemacs 일 경우에는 <code>SPC SPC
 org-publish-all</code> 로 실행시킬 수 있씁니다.
@@ -171,6 +179,10 @@ org-publish-all</code> 로 실행시킬 수 있씁니다.
 <p>
 별 문제가 없다면 이 명령 만으로 목적대로 원하는 디렉토리에 html과 함께 정적
 파일들도 복사될 것입니다.
+</p>
+
+<p>
+기타 별 다른 설정이 없었다면 위 명령은 변경된 파일만 익스포트 하고 복사를 수행합니다.
 </p>
 
 <hr>
@@ -185,6 +197,6 @@ org-publish-all</code> 로 실행시킬 수 있씁니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 10일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 11일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
