--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 14:35 -->
+<!-- 2019-11-11 Mon 16:44 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn</title>
@@ -12,10 +12,10 @@
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345"/>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-44534026-1');
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
@@ -33,6 +33,8 @@
 <li><a href="doom-emacs-install.html">Doom Emacs 설치하기</a></li>
 <li><a href="index.html">Frontpage</a></li>
 <li><a href="profile.html">Profile</a></li>
+<li><a href="python.html">Python</a></li>
+<li><a href="python-3-static-typing.html">Python 3 Static Typing</a></li>
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swift-5-1.html">Swift 5.1</a></li>
 <li><a href="org-publish.html">org-publish</a></li>
