--- a/doom-emacs.html
+++ b/doom-emacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 17:23 -->
+<!-- 2019-11-11 Mon 21:50 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs - Seorenn</title>
@@ -38,24 +38,26 @@ Doom Emacs 는 Emacs용 Community Driven Configuration의 양대산맥인 Spacem
 <p>
 Doom도 Spacemacs와 비슷하게 Vim 키맵을 구축시켜 주는 evil이라는 확장을 토대로
 Vim 키맵에 기반한 Emacs 환경을 셋업하고 이와 어울리는 단축키 환경을 만들어 놓은
-것이 특징적입니다.
+것이 특징입니다.
 </p>
 
-<div id="outline-container-org27fd516" class="outline-2">
-<h2 id="org27fd516">관련글</h2>
-<div class="outline-text-2" id="text-org27fd516">
+<div id="outline-container-orgb659ece" class="outline-2">
+<h2 id="orgb659ece">관련글</h2>
+<div class="outline-text-2" id="text-orgb659ece">
 <ul class="org-ul">
 <li><a href="./doom-emacs-install.html">Doom Emacs 설치하기</a></li>
 <li><a href="./doom-emacs-config.html">Doom Emacs 설정 기본</a></li>
 <li><a href="./doom-emacs-shortcuts.html">Doom Emacs 단축키 메모</a></li>
 <li><a href="./doom-emacs-vs-spacemacs.html">Doom Emacs VS Spacemacs</a></li>
-<li><a href="./org-publish.html">org-publish</a></li>
+<li><a href="./org-mode.html">Org Mode</a></li>
+<li><a href="./org-publish.html">Org Publish</a></li>
+<li><a href="./emacs.html">Emacs</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1fde850" class="outline-2">
-<h2 id="org1fde850">기타</h2>
-<div class="outline-text-2" id="text-org1fde850">
+<div id="outline-container-org5ad137f" class="outline-2">
+<h2 id="org5ad137f">기타</h2>
+<div class="outline-text-2" id="text-org5ad137f">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/hlissner/doom-emacs">Doom Emacs 공식 저장소</a></li>
 </ul>
