--- a/python.html
+++ b/python.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 17:23 -->
+<!-- 2019-11-11 Mon 21:50 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Python - Seorenn</title>
@@ -30,9 +30,9 @@ gtag('config', 'UA-44534026-1');
 언어라는 점이 가장 큰 특징입니다.
 </p>
 
-<div id="outline-container-orge174ca1" class="outline-2">
-<h2 id="orge174ca1">관련된 글 목록</h2>
-<div class="outline-text-2" id="text-orge174ca1">
+<div id="outline-container-orge25f44a" class="outline-2">
+<h2 id="orge25f44a">관련된 글 목록</h2>
+<div class="outline-text-2" id="text-orge25f44a">
 <ul class="org-ul">
 <li><a href="./python-3-static-typing.html">Python 3 Static Typing</a></li>
 </ul>
