--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 17:23 -->
+<!-- 2019-11-11 Mon 21:50 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn</title>
@@ -32,15 +32,19 @@ gtag('config', 'UA-44534026-1');
 <li><a href="doom-emacs-sapzil-install.html">Doom Emacs 삽질기 - 설치편</a></li>
 <li><a href="doom-emacs-config.html">Doom Emacs 설정 기본</a></li>
 <li><a href="doom-emacs-install.html">Doom Emacs 설치하기</a></li>
+<li><a href="emacs.html">Emacs</a></li>
+<li><a href="install-emacs.html">Emacs 설치</a></li>
 <li><a href="index.html">Frontpage</a></li>
+<li><a href="org-mode.html">Org Mode</a></li>
+<li><a href="org-tip.html">Org Mode 팁 모음</a></li>
+<li><a href="org-publish.html">Org Publish</a></li>
+<li><a href="org-publish-tips.html">Org Publish 팁 모음</a></li>
 <li><a href="profile.html">Profile</a></li>
 <li><a href="python.html">Python</a></li>
 <li><a href="python-3-static-typing.html">Python 3 Static Typing</a></li>
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swift-5-1.html">Swift 5.1</a></li>
-<li><a href="org-publish.html">org-publish</a></li>
 <li><a href="org-publish-sapzil.html">org-publish 삽질기</a></li>
-<li><a href="org-publish-tips.html">org-publish 팁 모음</a></li>
 </ul>
 <div id="footer"><div id="time">2019년 11월 11일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
