--- a/doom-emacs-sapzil-install.html
+++ b/doom-emacs-sapzil-install.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 17:23 -->
+<!-- 2019-11-11 Mon 21:50 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 삽질기 - 설치편 - Seorenn</title>
@@ -24,9 +24,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Doom Emacs 삽질기 - 설치편</h1>
 <h2><a href="/">by Seorenn</a></h2></header>
-<div id="outline-container-orgd2f18d7" class="outline-2">
-<h2 id="orgd2f18d7">결론부터 정리</h2>
-<div class="outline-text-2" id="text-orgd2f18d7">
+<div id="outline-container-orgf6d714f" class="outline-2">
+<h2 id="orgf6d714f">결론부터 정리</h2>
+<div class="outline-text-2" id="text-orgf6d714f">
 <p>
 아래의 순서대로 터미널에서 설치할 수 있습니다.
 </p>
@@ -42,9 +42,9 @@ $ bin/doom install
 </p>
 </div>
 </div>
-<div id="outline-container-org278aebc" class="outline-2">
-<h2 id="org278aebc">삽질기</h2>
-<div class="outline-text-2" id="text-org278aebc">
+<div id="outline-container-org609432f" class="outline-2">
+<h2 id="org609432f">삽질기</h2>
+<div class="outline-text-2" id="text-org609432f">
 <ul class="org-ul">
 <li>Spacemacs 에서 뭔가 잘 안 될 때마다 Doom Emacs에 관심을 가지게 되었다.</li>
 <li>그러다 누군가의 설치기를 구글링으로 찾았다.</li>
