Update some pages

--- a/install-emacs.html
+++ b/install-emacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 21:50 -->
+<!-- 2019-11-11 Mon 21:55 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Emacs 설치 - Seorenn</title>
@@ -85,10 +85,10 @@ option 으로는 여러 가지가 있지만 개인적으로는 Spacemacs Icon만
 <div id="outline-container-org7b6b907" class="outline-2">
 <h2 id="org7b6b907">관련글</h2>
 <div class="outline-text-2" id="text-org7b6b907">
-<p>
-<a href="./emacs.html">Emacs</a>
-<a href="./doom-emacs.html">Doom Emacs</a>
-</p>
+<ul class="org-ul">
+<li><a href="./emacs.html">Emacs</a></li>
+<li><a href="./doom-emacs.html">Doom Emacs</a></li>
+</ul>
 </div>
 </div>
 <div id="footer"><div id="time">2019년 11월 11일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
