--- a/org-publish.html
+++ b/org-publish.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 21:50 -->
+<!-- 2019-11-11 Mon 22:20 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Org Publish - Seorenn</title>
@@ -173,8 +173,8 @@ org-publish는 다행히도 별도로 설치할 필요가 없는 확장입니다
 <p>
 편찬(publish)을 하기 위해서는 <code>org-publish-all</code> 함수를 호출하면 됩니다.
 일반 Emacs 라면 <code>M-x org-publish-all</code> 로 실행시키거나, 혹은 Doom Emacs 라면
-<code>SPC : org-publish-all</code> 로 실행시키면 된다. Spacemacs 일 경우에는 <code>SPC SPC
-org-publish-all</code> 로 실행시킬 수 있씁니다.
+<code>SPC : org-publish-all</code> 로 실행시키면 됩니다. Spacemacs 일 경우에는 <code>SPC SPC
+org-publish-all</code> 로 실행시킬 수 있습니다.
 </p>
 
 <p>
