--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 21:50 -->
+<!-- 2019-11-11 Mon 21:58 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn</title>
@@ -35,19 +35,42 @@ gtag('config', 'UA-44534026-1');
 <p>
 몇 가지 분류를 모아놓은 가이드 페이지들입니다.
 </p>
+</div>
+<div id="outline-container-org9a6b2ed" class="outline-3">
+<h3 id="org9a6b2ed">프로필(Profile)</h3>
+<div class="outline-text-3" id="text-org9a6b2ed">
 <ul class="org-ul">
 <li><a href="./profile.html">Profile</a></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgf4a2e4e" class="outline-3">
+<h3 id="orgf4a2e4e">에디터(Editors)</h3>
+<div class="outline-text-3" id="text-orgf4a2e4e">
+<ul class="org-ul">
 <li><a href="./emacs.html">Emacs</a></li>
 <li><a href="./doom-emacs.html">Doom Emacs</a></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org846c188" class="outline-3">
+<h3 id="org846c188">프로그래밍 언어(Programming Language)</h3>
+<div class="outline-text-3" id="text-org846c188">
+<ul class="org-ul">
 <li><a href="./swift.html">Swift</a></li>
 <li><a href="./python.html">Python</a></li>
 </ul>
-
+</div>
+</div>
+<div id="outline-container-org32930d9" class="outline-3">
+<h3 id="org32930d9">기타</h3>
+<div class="outline-text-3" id="text-org32930d9">
 <p>
-사이트의 모든 링크는 <a href="./sitemap.html">사이트맵</a>에서 볼 수 있습니다. 다만 일부
+사이트의 모든 글 링크는 <a href="./sitemap.html">사이트맵</a>에서 볼 수 있습니다. 다만 일부
 링크가 걸리지 않은 페이지는 '폐기처분(?) 되었지만 404를 피하기 위해 그냥 남겨둔
 것'일 수도 있으니 주의(?) 부탁드립니다.
 </p>
+</div>
 </div>
 </div>
 <div id="footer"><div id="time">2019년 11월 11일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
