--- a/org-publish-tips.html
+++ b/org-publish-tips.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 21:50 -->
+<!-- 2019-11-11 Mon 22:20 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Org Publish 팁 모음 - Seorenn</title>
@@ -51,6 +51,7 @@ Doom Emacs 를 사용 중이라면 <code>SPC ;</code> 단축키로 위 명령을
 <ul class="org-ul">
 <li><a href="./org-mode.html">Org Mode</a></li>
 <li><a href="./org-publish.html">Org Publish</a></li>
+<li><a href="./emacs.html">Emacs</a></li>
 <li><a href="./doom-emacs.html">Doom Emacs</a></li>
 </ul>
 </div>
